--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/sitemap": "^1.0.0",
     "astro": "^1.9.0",
     "astro-compress": "^1.1.24",
+    "astro-icon": "^0.8.0",
     "astro-imagetools": "^0.6.17",
     "astro-robots-txt": "^0.3.11",
     "astro-seo": "^0.6.1",
