--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "astro-icon": "^0.8.0",
     "astro-imagetools": "^0.6.17",
     "astro-robots-txt": "^0.3.11",
-    "astro-seo": "^0.6.1",
-    "autoprefixer": "^10.4.13"
+    "astro-seo": "^0.6.1"
   },
   "devDependencies": {
-    "sass": "^1.59.3"
+    "sass": "^1.59.3",
+    "autoprefixer": "^10.4.13"
   }
 }
