Updated file formatting in vscode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,5 +12,13 @@
   "liveSassCompile.settings.excludeList": ["**/node_modules/**", ".vscode/**"],
   "liveSassCompile.settings.generateMap": false,
   // "liveSassCompile.settings.autoprefix": ["last 2 versions"],
-  "liveServer.settings.port": 3000
+  "liveServer.settings.port": 3000,
+  "search.useIgnoreFiles": true,
+  "prettier.documentSelectors": ["**/*.astro"],
+  "[astro]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[mdx]": {
+    "editor.wordWrap": "on"
+  }
 }
